--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.1",
     "react-navigation-header-buttons": "^8.0.0",
-    "react-native-reanimated": "~2.3.1"
+    "react-native-reanimated": "~2.3.1",
+    "@react-native-async-storage/async-storage": "~1.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
